fix overflow issue

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     color: var(--text-light);
     min-height: 100vh;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 header {
